--- a/layouts/_partials/hbx/blocks/defile/block.html
+++ b/layouts/_partials/hbx/blocks/defile/block.html
@@ -10,14 +10,14 @@
 
 <div class="flex flex-col items-center max-w-prose mx-auto">
 
-<div class="flex flex-col lg:gap-x-6 w-100 px-6 sm:px-0">
+<div class="flex flex-col lg:gap-x-6 w-full px-6 sm:px-0">
 
 <div class="w-full">
   {{ with $title }}
   <div class="mb-6 mt-4">
   <h3 class="text-3xl font-bold text-gray-900 dark:text-white">{{ . }}</h3>
   {{ with $text }}
-  <p class="text-gray-500 sm:text-xl dark:text-gray-400">{{.}}</p>
+  <p class="text-gray-700 sm:text-xl dark:text-gray-400">{{.}}</p>
   {{ end }}
   </div>
   {{ end }}
@@ -32,7 +32,7 @@
       {{ end }}
       <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white text-wrap">{{.name}}</h3>
 
-      <div class="mb-4 text-base font-normal text-gray-500 dark:text-gray-300 text-wrap prose prose-slate dark:prose-invert">{{.description}}</div>
+      <div class="mb-4 text-base font-normal text-gray-700 dark:text-gray-300 text-wrap prose prose-slate dark:prose-invert">{{.description}}</div>
 
       {{ with .button }}
       <a href="{{.url}}" target="_blank" rel="noopener" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-primary-700 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
