--- a/layouts/_partials/hooks/body-end/announcement.html
+++ b/layouts/_partials/hooks/body-end/announcement.html
@@ -13,10 +13,10 @@
         {{ end }}
         {{ $ctaLink = (printf "/%s/contact" $lang) }}
     {{ end }}
-    <div id="bottom-banner" tabindex="-1" class="fixed bottom-0 right-4 z-50 flex justify-between w-auto max-w-xs p-4 border border-gray-200 bg-gray-50 dark:bg-gray-700 dark:border-gray-600 rounded-lg shadow-lg">
+    <div id="bottom-banner" tabindex="-1" class="fixed bottom-0 right-4 z-50 flex justify-between w-auto max-w-xs p-4 border border-gray-200 bg-gray-50 rounded-lg shadow-lg">
         <div class="flex items-center">
             <p class="flex items-center text-sm font-normal text-gray-500">
-                <span class="inline-flex p-1 me-3 bg-primary-200 rounded-full dark:bg-gray-600 w-6 h-6 items-center justify-center mr-1">
+                <span class="inline-flex p-1 me-3 bg-primary-200 rounded-full w-6 h-6 items-center justify-center mr-1">
                      {{ partial "functions/get_icon" (dict "name" "hero/bolt" "attributes" `class="w-3.5 h-3.5 text-primary-500"`) }}
                     <span class="sr-only">announcement</span>
                 </span>
